Sun 25 Apr 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * htdig/Retriever.cc:
    Gilles's patch to avoid regex compile for every URL encountered.

Sun 25 Apr 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * contrib/htdig-3.2.0.spec:
    Karl Eichwalder's patch to use mktemp to create safe temp file.

Wed Apr  7 17:12:33 2004  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdig/Retriever.cc (IsValidURL): Fixed bug #931377 so bad_extensions
      and valid_extensions not thrown off by periods in query strings.

Mon Mar 15 11:56:04 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htsearch/Display.cc: changed (and fixed) the date factor formula as
    Lachlan and David Lippi suggested, in order not to give negative results.

Fri Mar 12 09:13:28 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * configure.in: removed 'eval' expressions which caused the 'NONE' prefix
      path to be instantiated and the make script to hang
    * acinclude.in: fixed AC_DEFINEs for SSL and ZLIB check macros, which prevented
      autoheader (and therefore autoreconf) to correctly work
    * moved manual pages from htdoc to installdir
    * htdoc/[manpages].in: removed
    * installdir/*.[1,8]: removed man pages (htdig-pdfparser.1, htdig.1,
      htdump.1, htfuzzy.1, htload.1, htmerge.1, htnotify.1, htpurge.1,
      htsearch.1, htstat.1, rundig.1, htdigconfig.8)
    * installdir/*.[1,8].in: added pre-configure man pages (htdig-pdfparser.1.in,
      htdig.1.in, htdump.1.in, htfuzzy.1.in, htload.1.in, htmerge.1.in, htnotify.1.in,
      htpurge.1.in, htsearch.1.in, htstat.1.in, rundig.1.in, htdigconfig.8.in)
    * regenerated configure scripts with autoreconf
    * fixes bug #909674

Sat 21 Feb 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * installdir/HtFileType: Use mktemp to create safe temp file (bug #901555)

Wed Feb 25 11:14:45 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>
