@@ -1,0 +1,33 @@
+/*-
+ * See the file LICENSE for redistribution information.
+ *
+ * Copyright (c) 1997, 1998, 1999
+ *	Sleepycat Software.  All rights reserved.
+ */
+
+/* Modified 10 April, 2004 by Lachlan Andrew for Windows paths */
+
+#include "db_config.h"
+
+#ifndef lint
+static const char sccsid[] = "@(#)os_abs.c	11.1 (Sleepycat) 7/25/99";
+#endif /* not lint */
+
+#ifndef NO_SYSTEM_INCLUDES
+#include <sys/types.h>
+#endif
+
+#include "db_int.h"
+
+/*
+ * CDB___os_abspath --
+ *	Return if a path is an absolute path.
+ *
+ * PUBLIC: int CDB___os_abspath __P((const char *));
+ */
+int
+CDB___os_abspath(path)
+	const char *path;
+{
+	return (path[0] == '/' || path[0] == '\\' || path [1] == ':');
+}
