@@ -6,7 +6,7 @@
   <body bgcolor="#eef7ff">
 	<h1>ht://Dig: Thanks</h1>
 	<p>
-	  ht://Dig Copyright &copy; 1995-2003 <a href="THANKS.html">The ht://Dig Group</a><br>
+	  ht://Dig Copyright &copy; 1995-2004 <a href="THANKS.html">The ht://Dig Group</a><br>
 	  Please see the file <a href="COPYING">COPYING</a> for
 	  license information.
 	</p>
@@ -88,6 +88,7 @@
 <li>Robert Ribnitz and the Debian Project for maintaining the <em>man</em> pages.</li>
 <li>Chris-Jason Richards for fixing htnotify under sendmail.</li>
 <li>Phillippe Rochat for fixing whitespace detection in config files.</li>
+<li>Markus R&ouml;hricht for help debugging a database error under CygWin.</li>
 <li><a href="author.html">Andrew Scherpbier</a> for being the original author and leading the project.</li>
 <li>Ren&eacute; Seindal for updates to the HTML parser and the timeout mechanism.</li>
 <li>Benjamin Smedberg for help with the ht://Dig website.</li>
@@ -97,6 +98,6 @@
 <li>And many others who made bug reports and suggested changes to the code!</li>
 	  </ul>
 	<hr size="4" noshade>
-		Last modified: $Date: 2004/02/25 10:10:05 $
+		Last modified: $Date: 2004/04/25 08:53:34 $
   </body>
 </html>
